--- a/config.conf
+++ b/config.conf
@@ -2,7 +2,8 @@
 bypass-system = true
 skip-proxy = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,localhost,*.local
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
-dns-server = 45.90.28.98,1.1.1.1,8.8.8.8,system
+# DNS as DOQ (DNS over QUIC) and DoH (DNS over HTTPS)
+dns-server = quic://dns.adguard-dns.com,https://security.cloudflare-dns.com/dns-query
 fallback-dns-server = system
 ipv6 = false
 prefer-ipv6 = false
@@ -35,6 +36,9 @@ update-url = https://raw.githubusercontent.com/s5k/proxy/refs/heads/master/confi
 🌐 DIRECT = select, DIRECT
 
 [Rule]
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.yaml,REJECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising_Domain.yaml,REJECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising_Classical.yaml,REJECT
 RULE-SET,https://whatshub.top/rule/AntiAD.list,REJECT
 RULE-SET,https://whatshub.top/rule/Spotify.list,🎻 SPOTIFY
 RULE-SET,https://whatshub.top/rule/Reddit.list,📖 REDDIT
