--- a/config.conf
+++ b/config.conf
@@ -15,39 +15,39 @@ private-ip-answer = false
 update-url = https://raw.githubusercontent.com/s5k/proxy/refs/heads/master/config.conf
 
 [Proxy Group]
-🚀 Strategy selection = select,♻️ ALL,🇹🇼 Taiwan,🇬🇧 United Kingdom,🇯🇵 Japan,🇭🇰 Hongkong,🇸🇬 Singapore,🇺🇸 United States,🇰🇷 Korea,🇷🇺 Russia,🇮🇳 India,🇩🇪 Germany,🇨🇦 Canada,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
-🇨🇳 China Latency = url-test,url=http://codm.qq.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
+🚀 STRATEGY SELECTION = select,♻️ ALL,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇯🇵 JAPAN,🇭🇰 HONGKONG,🇸🇬 SINGAPORE,🇺🇸 UNITED STATES,🇰🇷 KOREA,🇷🇺 RUSSIA,🇮🇳 INDIA,🇩🇪 GERMANY,🇨🇦 CANADA,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
+🇨🇳 CHINA LATENCY = url-test,url=http://developers.google.cn/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
 ♻️ ALL = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
-📹 YouTube = select,🌐 DIRECT,🚀 Strategy selection,🇭🇰 Hongkong,🇺🇸 United States,🇸🇬 Singapore,🇯🇵 Japan,🇹🇼 Taiwan,🇬🇧 United Kingdom, 🇰🇷 Korea,select=0
-🎻 Spotify = select,🌐 DIRECT,🚀 Strategy selection,🇭🇰 Hongkong,🇺🇸 United States,🇸🇬 Singapore,🇯🇵 Japan,🇹🇼 Taiwan,🇬🇧 United Kingdom, 🇰🇷 Korea, select=0
-📖 Reddit = select,🌐 DIRECT,🚀 Strategy selection,🇭🇰 Hongkong,🇺🇸 United States,🇸🇬 Singapore,🇯🇵 Japan,🇹🇼 Taiwan,🇬🇧 United Kingdom, 🇰🇷 Korea, select=0
-🎥 Tiktok = select,🌐 DIRECT,🚀 Strategy selection,🇭🇰 Hongkong,🇺🇸 United States,🇸🇬 Singapore,🇯🇵 Japan,🇹🇼 Taiwan,🇬🇧 United Kingdom, 🇰🇷 Korea,interval=86400,timeout=5,select=3,url=http://www.gstatic.com/generate_204
+📹 YOUTUBE = select,🌐 DIRECT,🚀 STRATEGY SELECTION,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,select=0
+🎻 SPOTIFY = select,🌐 DIRECT,🚀 STRATEGY SELECTION,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA, select=0
+📖 REDDIT = select,🌐 DIRECT,🚀 STRATEGY SELECTION,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA, select=0
+🎥 TIKTOK = select,🌐 DIRECT,🚀 STRATEGY SELECTION,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,interval=86400,timeout=5,select=3,url=http://www.gstatic.com/generate_204
 # Nodes
-🇻🇳 Vietnam = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(🇻🇳|VN|VN |Viet Nam|Vietnam|Saigon|HCM|Hồ Chí Minh|Ho Chi Minh|Hanoi|Hà Nội|Ha Noi)
-🇭🇰 Hongkong = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇭🇰|港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$
-🇹🇼 Taiwan = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇹🇼|台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$
-🇺🇸 United States = load-balance,url=http://www.gstatic.com/generate_204,interval=600,timeout=5,select=15,policy-regex-filter=(?=.*(🇺🇸|美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|美國|韓國|獅城)).)*$
-🇰🇷 Korea = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇰🇷|KR|Korea|KOR|首尔|韩|韓|(?i)Korea))^((?!(香港|台湾|新加坡|美国|狮城|南朝鲜|US|SG|HK|TW|台灣|美國|獅城)).)*$
-🇷🇺 Russia = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇷🇺|俄罗斯|RU|莫斯科|圣彼得堡|喀山|哈尔科夫|乌法|新西伯利亚|下诺夫哥罗德|沃罗涅什
-🇬🇧 United Kingdom = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇬🇧|英国|UK|伦敦|英格兰|伯明翰|泰恩河畔纽卡斯尔|利兹|爱丁堡|格拉斯哥|苏格兰
-🇯🇵 Japan = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇯🇵|日本|JP|(?i)Japan))^((?!(香港|台湾|新加坡|美国|韩国|狮城|南朝鲜|US|SG|KR|HK|TW|台灣|美國|韓國|獅城)).)*$
-🇸🇬 Singapore = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇸🇬|新加坡|狮城|SG|(?i)Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台灣|美國|韓國)).)*$
-🇮🇳 India = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇮🇳|India|IN|IND|孟买|新德里|高知|Republic of India|India
-🇩🇪 Germany = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇩🇪|Germany|DEU|DE|柏林|慕尼黑|汉堡|科隆|Germany
-🇨🇦 Canada = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇨🇦|Canada|CA|渥太华
-🌐 DIRECT = select, DIRECT, 🚀 Strategy selection,🇨🇳 China Latency,🇻🇳 Vietnam,🇭🇰 Hongkong,🇹🇼 Taiwan,🇺🇸 United States,🇯🇵 Japan,🇬🇧 United Kingdom,🇰🇷 Korea,🇷🇺 Russia,🇮🇳 India,🇩🇪 Germany,🇨🇦 Canada, interval=86400, timeout=5, select=0
+🇻🇳 VIETNAM = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(🇻🇳|VN|VN |Viet Nam|VIETNAM|Vietnam|Saigon|HCM|Hồ Chí Minh|Ho Chi Minh|Hanoi|Hà Nội|Ha Noi)
+🇭🇰 HONGKONG = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇭🇰|港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$
+🇹🇼 TAIWAN = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇹🇼|台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$
+🇺🇸 UNITED STATES = load-balance,url=http://www.gstatic.com/generate_204,interval=600,timeout=5,select=15,policy-regex-filter=(?=.*(🇺🇸|美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|美國|韓國|獅城)).)*$
+🇰🇷 KOREA = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇰🇷|KR|KOREA|Korea|KOR|首尔|韩|韓|(?i)Korea))^((?!(香港|台湾|新加坡|美国|狮城|南朝鲜|US|SG|HK|TW|台灣|美國|獅城)).)*$
+🇷🇺 RUSSIA = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇷🇺|俄罗斯|RU|Russia|RUSSIA|莫斯科|圣彼得堡|喀山|哈尔科夫|乌法|新西伯利亚|下诺夫哥罗德|沃罗涅什
+🇬🇧 UNITED KINGDOM = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇬🇧|英国|UK|United Kingdom|UNITED KINGDOM|伦敦|英格兰|伯明翰|泰恩河畔纽卡斯尔|利兹|爱丁堡|格拉斯哥|苏格兰
+🇯🇵 JAPAN = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇯🇵|日本|JP|(?i)JAPAN|Japan))^((?!(香港|台湾|新加坡|美国|韩国|狮城|南朝鲜|US|SG|KR|HK|TW|台灣|美國|韓國|獅城)).)*$
+🇸🇬 SINGAPORE = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇸🇬|新加坡|狮城|SG|(?i)SINGAPORE|Singapore))^((?!(香港|台湾|日本|美国|韩国|南朝鲜|US|JP|KR|HK|TW|台灣|美國|韓國)).)*$
+🇮🇳 INDIA = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇮🇳|INDIA|India|IN|IND|孟买|新德里|高知|Republic of INDIA|INDIA
+🇩🇪 GERMANY = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇩🇪|GERMANY|Germany|DEU|DE|柏林|慕尼黑|汉堡|科隆|GERMANY
+🇨🇦 CANADA = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇨🇦|CANADA|Canada|CA|渥太华
+🌐 DIRECT = select,DIRECT,🚀 STRATEGY SELECTION,🇨🇳 CHINA LATENCY,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇹🇼 TAIWAN,🇺🇸 UNITED STATES,🇯🇵 JAPAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,🇷🇺 RUSSIA,🇮🇳 INDIA,🇩🇪 GERMANY,🇨🇦 CANADA, interval=86400, timeout=5, select=0
 
 [Rule]
 #RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.yaml,REJECT
 #RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising_Domain.yaml,REJECT
 #RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising_Classical.yaml,REJECT
 #RULE-SET,https://whatshub.top/rule/AntiAD.list,REJECT
-RULE-SET,https://whatshub.top/rule/Spotify.list,🎻 Spotify
-RULE-SET,https://whatshub.top/rule/Reddit.list,📖 Reddit
-RULE-SET,https://whatshub.top/rule/YouTube.list,📹 YouTube
-RULE-SET,https://whatshub.top/rule/YouTubeMusic.list,📹 YouTube
-RULE-SET,https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Shadowrocket/TikTok.list,🎥 Tiktok
-FINAL,DIRECT
+RULE-SET,https://whatshub.top/rule/Spotify.list,🎻 SPOTIFY
+RULE-SET,https://whatshub.top/rule/Reddit.list,📖 REDDIT
+RULE-SET,https://whatshub.top/rule/YouTube.list,📹 YOUTUBE
+RULE-SET,https://whatshub.top/rule/YouTubeMusic.list,📹 YOUTUBE
+RULE-SET,https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Shadowrocket/TikTok.list,🎥 TIKTOK
+FINAL,🌐 DIRECT
 
 [MITM]
 enable = true
