--- a/config.conf
+++ b/config.conf
@@ -16,7 +16,7 @@ update-url = https://raw.githubusercontent.com/s5k/proxy/refs/heads/master/confi
 
 [Proxy Group]
 🚀 STRATEGY SELECTION = select,♻️ ALL,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇯🇵 JAPAN,🇭🇰 HONGKONG,🇸🇬 SINGAPORE,🇺🇸 UNITED STATES,🇰🇷 KOREA,🇷🇺 RUSSIA,🇮🇳 INDIA,🇩🇪 GERMANY,🇨🇦 CANADA,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
-🇨🇳 CHINA LATENCY = url-test,url=http://developers.google.cn/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
+🇨🇳 CHINA LATENCY = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
 ♻️ ALL = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
 📹 YOUTUBE = select,🌐 DIRECT,🚀 STRATEGY SELECTION,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,select=0
 🎻 SPOTIFY = select,🌐 DIRECT,🚀 STRATEGY SELECTION,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA, select=0
@@ -35,7 +35,7 @@ update-url = https://raw.githubusercontent.com/s5k/proxy/refs/heads/master/confi
 🇮🇳 INDIA = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇮🇳|INDIA|India|IN|IND|孟买|新德里|高知|Republic of INDIA|INDIA
 🇩🇪 GERMANY = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇩🇪|GERMANY|Germany|DEU|DE|柏林|慕尼黑|汉堡|科隆|GERMANY
 🇨🇦 CANADA = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇨🇦|CANADA|Canada|CA|渥太华
-🌐 DIRECT = select,DIRECT,🚀 STRATEGY SELECTION,🇨🇳 CHINA LATENCY,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇹🇼 TAIWAN,🇺🇸 UNITED STATES,🇯🇵 JAPAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,🇷🇺 RUSSIA,🇮🇳 INDIA,🇩🇪 GERMANY,🇨🇦 CANADA, interval=86400, timeout=5, select=0
+🌐 ALL TRAFFIC = select,DIRECT,🚀 STRATEGY SELECTION,🇨🇳 CHINA LATENCY,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇹🇼 TAIWAN,🇺🇸 UNITED STATES,🇯🇵 JAPAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,🇷🇺 RUSSIA,🇮🇳 INDIA,🇩🇪 GERMANY,🇨🇦 CANADA, interval=86400, timeout=5, select=0
 
 [Rule]
 #RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.yaml,REJECT
