--- a/config.conf
+++ b/config.conf
@@ -16,7 +16,7 @@ update-url = https://raw.githubusercontent.com/s5k/proxy/refs/heads/master/confi
 
 [Proxy Group]
 🚀 STRATEGY SELECTION = select,♻️ ALL,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇯🇵 JAPAN,🇭🇰 HONGKONG,🇸🇬 SINGAPORE,🇺🇸 UNITED STATES,🇰🇷 KOREA,🇷🇺 RUSSIA,🇮🇳 INDIA,🇩🇪 GERMANY,🇨🇦 CANADA,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
-🇨🇳 CHINA LATENCY = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
+🇨🇳 CHINA LATENCY = url-test,url=http://connect.rom.miui.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
 ♻️ ALL = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
 📹 YOUTUBE = select,🌐 DIRECT,🚀 STRATEGY SELECTION,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,select=0
 🎻 SPOTIFY = select,🌐 DIRECT,🚀 STRATEGY SELECTION,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA, select=0
