--- a/config.conf
+++ b/config.conf
@@ -15,18 +15,17 @@ private-ip-answer = false
 update-url = https://raw.githubusercontent.com/s5k/proxy/refs/heads/master/config.conf
 
 [Proxy Group]
-🚀 STRATEGY SELECTION = select,♻️ ALL,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇯🇵 JAPAN,🇭🇰 HONGKONG,🇸🇬 SINGAPORE,🇺🇸 UNITED STATES,🇰🇷 KOREA,🇷🇺 RUSSIA,🇮🇳 INDIA,🇩🇪 GERMANY,🇨🇦 CANADA,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
-🇨🇳 CHINA LATENCY = url-test,url=http://connect.rom.miui.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
+🚀 HIGH SPEED = select,♻️ ALL,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇯🇵 JAPAN,🇭🇰 HONGKONG,🇸🇬 SINGAPORE,🇺🇸 UNITED STATES,🇰🇷 KOREA,🇷🇺 RUSSIA,🇮🇳 INDIA,🇩🇪 GERMANY,🇨🇦 CANADA,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 ♻️ ALL = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
-📹 YOUTUBE = select,🌐 DIRECT,🚀 STRATEGY SELECTION,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,select=0
-🎻 SPOTIFY = select,🌐 DIRECT,🚀 STRATEGY SELECTION,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA, select=0
-📖 REDDIT = select,🌐 DIRECT,🚀 STRATEGY SELECTION,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA, select=0
-🎥 TIKTOK = select,🌐 DIRECT,🚀 STRATEGY SELECTION,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,interval=86400,timeout=5,select=3,url=http://www.gstatic.com/generate_204
+📹 YOUTUBE = select,DIRECT,🚀 HIGH SPEED,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,select=0
+🎻 SPOTIFY = select,DIRECT,🚀 HIGH SPEED,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA, select=0
+📖 REDDIT = select,DIRECT,🚀 HIGH SPEED,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA, select=0
+🎥 TIKTOK = select,DIRECT,🚀 HIGH SPEED,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,interval=86400,timeout=5,select=3,url=http://www.gstatic.com/generate_204
 # Nodes
 🇻🇳 VIETNAM = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(🇻🇳|VN|VN |Viet Nam|VIETNAM|Vietnam|Saigon|HCM|Hồ Chí Minh|Ho Chi Minh|Hanoi|Hà Nội|Ha Noi)
 🇭🇰 HONGKONG = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇭🇰|港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$
 🇹🇼 TAIWAN = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇹🇼|台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$
-🇺🇸 UNITED STATES = load-balance,url=http://www.gstatic.com/generate_204,interval=600,timeout=5,select=15,policy-regex-filter=(?=.*(🇺🇸|美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|美國|韓國|獅城)).)*$
+🇺🇸 UNITED STATES = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇺🇸|美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|美國|韓國|獅城)).)*$
 🇰🇷 KOREA = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇰🇷|KR|KOREA|Korea|KOR|首尔|韩|韓|(?i)Korea))^((?!(香港|台湾|新加坡|美国|狮城|南朝鲜|US|SG|HK|TW|台灣|美國|獅城)).)*$
 🇷🇺 RUSSIA = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇷🇺|俄罗斯|RU|Russia|RUSSIA|莫斯科|圣彼得堡|喀山|哈尔科夫|乌法|新西伯利亚|下诺夫哥罗德|沃罗涅什
 🇬🇧 UNITED KINGDOM = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇬🇧|英国|UK|United Kingdom|UNITED KINGDOM|伦敦|英格兰|伯明翰|泰恩河畔纽卡斯尔|利兹|爱丁堡|格拉斯哥|苏格兰
@@ -35,7 +34,7 @@ update-url = https://raw.githubusercontent.com/s5k/proxy/refs/heads/master/confi
 🇮🇳 INDIA = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇮🇳|INDIA|India|IN|IND|孟买|新德里|高知|Republic of INDIA|INDIA
 🇩🇪 GERMANY = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇩🇪|GERMANY|Germany|DEU|DE|柏林|慕尼黑|汉堡|科隆|GERMANY
 🇨🇦 CANADA = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇨🇦|CANADA|Canada|CA|渥太华
-🌐 ALL TRAFFIC = select,DIRECT,🚀 STRATEGY SELECTION,🇨🇳 CHINA LATENCY,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇹🇼 TAIWAN,🇺🇸 UNITED STATES,🇯🇵 JAPAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,🇷🇺 RUSSIA,🇮🇳 INDIA,🇩🇪 GERMANY,🇨🇦 CANADA, interval=86400, timeout=5, select=0
+🌐 PROXY = select,DIRECT,🚀 HIGH SPEED,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇹🇼 TAIWAN,🇺🇸 UNITED STATES,🇯🇵 JAPAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,🇷🇺 RUSSIA,🇮🇳 INDIA,🇩🇪 GERMANY,🇨🇦 CANADA, interval=86400, timeout=5, select=0
 
 [Rule]
 #RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.yaml,REJECT
@@ -47,7 +46,7 @@ RULE-SET,https://whatshub.top/rule/Reddit.list,📖 REDDIT
 RULE-SET,https://whatshub.top/rule/YouTube.list,📹 YOUTUBE
 RULE-SET,https://whatshub.top/rule/YouTubeMusic.list,📹 YOUTUBE
 RULE-SET,https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Shadowrocket/TikTok.list,🎥 TIKTOK
-FINAL,🌐 DIRECT
+FINAL,DIRECT,🌐 PROXY
 
 [MITM]
 enable = true
