--- a/config.conf
+++ b/config.conf
@@ -18,9 +18,9 @@ update-url = https://raw.githubusercontent.com/s5k/proxy/refs/heads/master/confi
 🚀 HIGH SPEED = select,♻️ ALL,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇯🇵 JAPAN,🇭🇰 HONGKONG,🇸🇬 SINGAPORE,🇺🇸 UNITED STATES,🇰🇷 KOREA,🇷🇺 RUSSIA,🇮🇳 INDIA,🇩🇪 GERMANY,🇨🇦 CANADA,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 ♻️ ALL = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=.*
 📹 YOUTUBE = select,DIRECT,🚀 HIGH SPEED,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,select=0
-🎻 SPOTIFY = select,DIRECT,🚀 HIGH SPEED,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA, select=0
-📖 REDDIT = select,DIRECT,🚀 HIGH SPEED,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA, select=0
-🎥 TIKTOK = select,DIRECT,🚀 HIGH SPEED,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,interval=86400,timeout=5,select=3,url=http://www.gstatic.com/generate_204
+🎻 SPOTIFY = select,DIRECT,🚀 HIGH SPEED,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,select=0
+📖 REDDIT = select,DIRECT,🚀 HIGH SPEED,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,select=0
+🎥 TIKTOK = select,DIRECT,🚀 HIGH SPEED,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,select=4
 # Nodes
 🇻🇳 VIETNAM = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(🇻🇳|VN|VN |Viet Nam|VIETNAM|Vietnam|Saigon|HCM|Hồ Chí Minh|Ho Chi Minh|Hanoi|Hà Nội|Ha Noi)
 🇭🇰 HONGKONG = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇭🇰|港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$
