--- a/config.conf
+++ b/config.conf
@@ -46,7 +46,7 @@ RULE-SET,https://whatshub.top/rule/Reddit.list,📖 REDDIT
 RULE-SET,https://whatshub.top/rule/YouTube.list,📹 YOUTUBE
 RULE-SET,https://whatshub.top/rule/YouTubeMusic.list,📹 YOUTUBE
 RULE-SET,https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Shadowrocket/TikTok.list,🎥 TIKTOK
-FINAL,DIRECT,🌐 PROXY
+FINAL,🌐 PROXY
 
 [MITM]
 enable = true
