--- a/config.conf
+++ b/config.conf
@@ -21,10 +21,11 @@ update-url = https://raw.githubusercontent.com/s5k/proxy/refs/heads/master/confi
 🎻 SPOTIFY = select,DIRECT,🚀 HIGH SPEED,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,select=0
 📖 REDDIT = select,DIRECT,🚀 HIGH SPEED,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,select=0
 🎥 TIKTOK = select,DIRECT,🚀 HIGH SPEED,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,select=4
+ⓕ FACEBOOK = select,DIRECT,🚀 HIGH SPEED,🇻🇳 VIETNAM,🇭🇰 HONGKONG,🇺🇸 UNITED STATES,🇸🇬 SINGAPORE,🇯🇵 JAPAN,🇹🇼 TAIWAN,🇬🇧 UNITED KINGDOM,🇰🇷 KOREA,select=4
 # Nodes
 🇻🇳 VIETNAM = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(🇻🇳|VN|VN |Viet Nam|VIETNAM|Vietnam|Saigon|HCM|Hồ Chí Minh|Ho Chi Minh|Hanoi|Hà Nội|Ha Noi)
 🇭🇰 HONGKONG = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇭🇰|港|HK|(?i)Hong))^((?!(台湾|日本|新加坡|美国|韩国|狮城|南朝鲜|US|SG|JP|KR|TW|台灣|美國|韓國|獅城)).)*$
-🇹🇼 TAIWAN = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇹🇼|台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$
+🇹🇼 TAIWAN = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇨🇳|🇹🇼|台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$
 🇺🇸 UNITED STATES = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇺🇸|美国|美國|US|洛杉矶|西雅图|(?i)States|American))^((?!(香港|台湾|日本|新加坡|韩国|狮城|南朝鲜|SG|JP|KR|HK|TW|台灣|美國|韓國|獅城)).)*$
 🇰🇷 KOREA = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=(?=.*(🇰🇷|KR|KOREA|Korea|KOR|首尔|韩|韓|(?i)Korea))^((?!(香港|台湾|新加坡|美国|狮城|南朝鲜|US|SG|HK|TW|台灣|美國|獅城)).)*$
 🇷🇺 RUSSIA = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,policy-regex-filter=🇷🇺|俄罗斯|RU|Russia|RUSSIA|莫斯科|圣彼得堡|喀山|哈尔科夫|乌法|新西伯利亚|下诺夫哥罗德|沃罗涅什
@@ -46,6 +47,7 @@ RULE-SET,https://whatshub.top/rule/Reddit.list,📖 REDDIT
 RULE-SET,https://whatshub.top/rule/YouTube.list,📹 YOUTUBE
 RULE-SET,https://whatshub.top/rule/YouTubeMusic.list,📹 YOUTUBE
 RULE-SET,https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Shadowrocket/TikTok.list,🎥 TIKTOK
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Facebook/Facebook.list,ⓕ FACEBOOK
 FINAL,🌐 PROXY
 
 [MITM]
